# wsb-sentiment-predictor

./: README.md  notes.md  pyproject.toml
src/Sentiment/: __init__.py  sentiment_tools.py
tests/: test_sentiment_tools.py
