[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsb-sentiment-predictor"
version = "0.1.0"
description = "Predict buy/not-buy signals from r/wallstreetbets using FINBert sentiment analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "praw>=7.7",
    "transformers>=4.35",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/Sentiment"]
